--- a/third/style.css
+++ b/third/style.css
@@ -12,13 +12,17 @@ header {
   background-color: #CBC9CF;
   margin-top: 0;
   width: 100%;
-  height: 15vh;
+  height: 10vh;
 }
 
-.white {
+#white {
   background-color: white;
   width: 100%;
   height: 30vh;
+  text-align: left;
+}
+#text {
+  padding: 20px;
 }
 
 .blue{
